Changed requirements and apps

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-django==1.5.1
-oauth2==1.5.211
-south==0.7.3
-beautifulsoup==3.2.1
-gunicorn==0.13.4
-psycopg2==2.4.4
-wsgiref==0.1.2
+BeautifulSoup==3.2.1
+Django==1.5.1
+South==0.7.3
+argparse==1.2.1
+django-pagseguro==1.4.2
 gdata==2.0.16
+gunicorn==0.13.4
+httplib2==0.9.1
+oauth==1.0.1
+oauth2==1.5.211
+psycopg2==2.4.4
+requests==2.7.0
+wsgiref==0.1.2
