--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 Django==1.10.5
-djangorestframework
-django-flat-responsive
-django-pure-pagination
-django-dropbox
-django-pagseguro
-django-paypal
-django-ship
-django-feedly
+djangorestframework==3.5.4
+django-flat-responsive==1.3.0
+django-pure-pagination==0.3.0
+django-dropbox==0.0.2
+django-pagseguro==1.4.2
+django-paypal==0.3.6
+django-ship==0.2.3
+django-feedly==0.6.4
+pypugjs==4.2.0
 BeautifulSoup==3.2.1
 argparse==1.2.1
 gdata==2.0.16
