--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ django-pure-pagination==0.3.0
 django-dropbox==0.0.2
 django-pagseguro==1.4.2
 django-paypal==0.3.6
-django-ship==0.2.3
-django-feedly==0.6.4
+django-ship==0.2.4
+django-feedly==0.6.5
+django-socialize==0.5.1
 pypugjs==4.2.0
 BeautifulSoup==3.2.1
 argparse==1.2.1
