Fixed some problems for production

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==1.10.5
 django-flat-responsive==1.3.0
 django-pure-pagination==0.3.0
+django-crispy-forms==1.6.1
 django-dropbox==0.0.2
 django-pagseguro==1.4.2
 django-paypal==0.3.6
