--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-Django==1.10.5
+Django==1.11.29
 django-flat-responsive==1.3.0
 django-pure-pagination==0.3.0
 django-crispy-forms==1.6.1
 django-dropbox==0.0.2
 django-pagseguro==1.4.2
 django-paypal==0.3.6
-django-ship==0.2.5
-django-feedly==0.6.6
-django-socialize==0.5.2
-pypugjs==4.2.0
-BeautifulSoup==3.2.1
+django-ship==0.2.6
+django-feedly==0.6.7
+django-socialize==0.5.3
+pypugjs==5.9.4
+beautifulsoup4==4.9.0
 argparse==1.2.1
-gdata==2.0.16
-gunicorn==0.13.4
+gdata-python3==3.0.1
+gunicorn==20.0.4
 httplib2==0.9.1
 oauth==1.0.1
-oauth2==1.5.211
-psycopg2==2.4.4
-requests==2.7.0
-wsgiref==0.1.2
+oauth2==1.9.0.post1
+psycopg2==2.8.5
+requests==2.23.0
+# wsgiref==0.1.2
