--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==3.0.7
-django-pure-pagination==0.3.0
-django-crispy-forms==1.9.0
-django-dropbox==0.0.2
-requests==2.23.0
+Django>=3.0.7
+django-pure-pagination>=0.3.0
+django-crispy-forms>=1.9.0
+django-dropbox>=0.0.2
+requests>=2.23.0
